samples/_failures_safe/1761472630_83eb2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f451d58c.c: In function ‘main’:
./samples/SAFE/__tmp_f451d58c.c:143:9: error: expected declaration or statement at end of input
  143 |         printf("No words found in input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_f451d58c.c:143:9: error: expected declaration or statement at end of input
